--- a/index.html
+++ b/index.html
@@ -196,6 +196,11 @@ p{ margin:10px auto}
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/>  <span class="red">(01/12/2024) Two new 36-month projects awarded (PI) by National Key R&D Programme and National *** Fellowship Programme. A few PhD Student and Postdoc positions will open soon! </span> Drop me emails if you are interested... </span></p>
 
 <p><span class="style11"> 
+
+<p><span class="style11"> (13/09/2025) Our works on AIOps and straggler detection in AI infrastructure have been accepted by ASE 2025. Big congrats to Zeying and Yitang! </span></p>
+ 
+<p><span class="style11"> (10/09/2025) Our works on releasing differentially private features has been accepted by TIFS 2025. Big congrats to Xinyue and Xiaoyu! </span></p>
+
 <p><span class="style11"> (10/12/2024) Our work on optimized pareto front of hypernetwork has been accepted by AAAI 2025. Big congrats to Hui!</span></p>
 
 <p><span class="style11"> (20/11/2024) I will serve as Associate Editor of CCF Computer Engineering and Design Journal for the next 4 years! </span></p>
@@ -229,9 +234,9 @@ p{ margin:10px auto}
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
-<p><span class="style11"> I have published 70+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> ~4,000 citations, h-index=28, as of July 2025), 
+<p><span class="style11"> I have published 70+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 4,000+ citations, h-index=30, as of Sept. 2025), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, ACM Computing Surveys (CSUR), 
-	EuroSys, SC, SoCC, ICDCS, DSN, VLDB, ICDE, WWW, KDD, AAAI, IJCAI, etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
+	EuroSys, SC, SoCC, ICDCS, DSN, ASE, VLDB, ICDE, WWW, KDD, AAAI, IJCAI, etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 and the Grand Class of Scientific and 
 	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established). 
 	I co-founded the highly successful and internationally leading research consortium COLAB between Leeds, 
@@ -255,13 +260,13 @@ p{ margin:10px auto}
 <p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed and parallel computing systems at scale such as cloud computing, big data, deep learning training/inference, IoT, etc. My research mainly focuses on: </span></p>
 	<p><span class="style11">&bull; <strong>Enhanced resource efficiency of large-scale computing infrastructures:</strong>
 		QoS-aware resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>, <a href="paper/eurosys2025.pdf" style="text-decoration: none">EuroSys'25</a>], 
-		DL model training acceleration [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>,<a href="paper/socc2024-kale.pdf" style="text-decoration: none">SoCC'24</a>], 
+		DL model training acceleration [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>,<a href="paper/socc2024-kale.pdf" style="text-decoration: none">SoCC'24</a>,<a href="paper/ase2025-kair.pdf" style="text-decoration: none">ASE'25b</a>], 
 		and multi-objective optimization [<a href="paper/aaai2025.pdf" style="text-decoration: none">AAAI'25</a>, <a href="paper/fcs2025.pdf" style="text-decoration: none">FCS'25</a>, <a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>, <a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>, <a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>, <a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
 	<p><span class="style11">&bull; <strong>Enhanced system dependability:</strong>
 		fault tolerance and failure recovery [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>, <a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>],  
-		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>, <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>, <a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>, <a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>, <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">KDD'24b</a>]
+		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>, <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>, <a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>, <a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>, <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">KDD'24b</a>,<a href="paper/ase2025-kaiops.pdf" style="text-decoration: none">ASE'25a</a>]
 		and dependability modeling [<a href="paper/icde2024.pdf" style="text-decoration: none">ICDE'24</a>, <a href="paper/icde2024.pdf" style="text-decoration: none">SOSP'24 poster</a>]</span></p> 
-	<p><span class="style11">&bull; <strong>Enhanced intelligent systems and applications:</strong>  data-centric engineering [<a href="paper/sose2016.pdf" style="text-decoration: none">SOSE'16</a>,<a href="paper/csur2020.pdf" style="text-decoration: none">CSUR'20</a>,<a href="paper/tkde2021.pdf" style="text-decoration: none">TKDE'23</a>], 
+	<p><span class="style11">&bull; <strong>Enhanced intelligent systems and applications:</strong>  data-centric engineering [<a href="paper/sose2016.pdf" style="text-decoration: none">SOSE'16</a>,<a href="paper/csur2020.pdf" style="text-decoration: none">CSUR'20</a>,<a href="paper/tkde2021.pdf" style="text-decoration: none">TKDE'23</a>,<a href="paper/tifs2025.pdf" style="text-decoration: none">TIFS'25</a>], 
 		graph representation learning [<a href="paper/tc2021.pdf" style="text-decoration: none">TC'21</a>,<a href="paper/tois2021-riognn.pdf" style="text-decoration: none">TOIS'21</a>,<a href="paper/www2023-segsl.pdf" style="text-decoration: none">WWW'23a</a>, <a href="paper/kdd2024-sebot.pdf" style="text-decoration: none">KDD'24a</a>], etc. </span></p>
 </div>
 
@@ -304,6 +309,10 @@ p{ margin:10px auto}
 <div id="div_pub">
 
 <p><span class="Bolder"><!--img src="icons/paper-banner.png" width="25" height="25" border="0"/--> Selected Recent Publications </span></p>
+
+<p><span class="style11">&bull; <a href="paper/ase2025-kaiops.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> KAIOps: A Platform Solution of End-to-End Multi-Modal AIOps for AI Training at Scale</a>. IEEE/ACM ASE 2025 <span class="red">(CCF A)</span></span></p>
+
+<p><span class="style11">&bull; <a href="paper/ase2025-kair.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> KAIR: A Statistical and Causal Approach to Pinpointing Stragglers in Distributed Model Training</a>. IEEE/ACM ASE 2025 <span class="red">(CCF A)</span></span></p>
 
 <p><span class="style11">&bull; <a href="paper/eurosys2025.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications</a>. ACM EuroSys 2025 <span class="red">(CCF A)</span></span></p>
 
