--- a/publications.html
+++ b/publications.html
@@ -116,13 +116,21 @@ p{ margin:10px auto}
 
 <p lang="en-US"><span class="blue">2025</span></p>
 
-<p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang*, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications. The 20th ACM European Conference on Computer Systems (EuroSys) <a href="paper/eurosys2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; Z. Wang, J. Liu, P. Zhang, X. Sun, X. Wang, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang*. KAIOps: A Platform Solution of End-to-End Multi-Modal AIOps for AI Training at Scale. The 40th IEEE/ACM International Conference on Automated Software Engineering (ASE) <a href="paper/ase2025-kaiops.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+<p><span class="style11">&bull; Y. Yang, J. Liu, J. Chen, X. Sun, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang. KAIR: A Statistical and Causal Approach to Pinpointing Stragglers in Distributed Model Training. The 40th IEEE/ACM International Conference on Automated Software Engineering (ASE) <a href="paper/ase2025-kair.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+<p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang*, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu. SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications. The 20th ACM European Conference on Computer Systems (EuroSys) <a href="paper/eurosys2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p><span class="style11">&bull; H. Wang, R. Yang*, J. Sun, H. Peng, X. Mou, T. Wo and X. Liu. IOP: An Idempotent-Like Optimization Method on the Pareto Front of Hypernetwork. The 39th AAAI Conference on Artificial Intelligence (AAAI) (oral) <a href="paper/aaai2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
+<p><span class="style11">&bull; C. Luo, T. Chen, R. Yang*, W. Wu, C. Hu. GenSC: A Novel and General Local Search Framework for Set Covering Problem. Frontiers of Computer Science (FCS) <a href="paper/fcs2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+<p><span class="style11">&bull; X. Sun, X. Liu, Q. Ye, H. Hu, R. Yang, H. He, W. Zhang. DPDeno: A Post-Processing Framework for Releasing Differentially Private Spatio-Temporal Mobility Features.  IEEE Transactions on Information Forensics and Security (TIFS) <a href="paper/tifs2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
 <p><span class="style11">&bull; Z. Zou, M. Zhang, G. Li, R. Yang, T. Wo, C. Hu, M. Xu. Recent Advances in Programmable Switches Driven Network Security. Journal of Software (In Chinese) <a href="paper/jos2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
-<p><span class="style11">&bull; C. Luo, T. Chen, R. Yang*, W. Wu, C. Hu. GenSC: A Novel and General Local Search Framework for Set Covering Problem. Frontiers of Computer Science <a href="paper/fcs2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; X. Mou, R. Wang, T. Wang, R. Yang*, S. Chen, J. Sun, T. Wo, X. Liu. CAPMix: Robust Time Series Anomaly Detection Based on Abnormal Assumptions with Dual-Space Mixup. arXiv Preprint, 2025 <a href="https://arxiv.org/abs/2509.06419"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a>
 
 
 <p lang="en-US"><span class="blue">2024</span></p>
