--- a/publications_topics.html
+++ b/publications_topics.html
@@ -118,6 +118,8 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="blue"> Distributed and Parallel Computing </span></p>
 
 
+<p><span class="style11">&bull; Y. Yang, J. Liu, J. Chen, X. Sun, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang. KAIR: A Statistical and Causal Approach to Pinpointing Stragglers in Distributed Model Training. The 40th IEEE/ACM International Conference on Automated Software Engineering (ASE) <a href="paper/ase2025-kair.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
 <p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang*, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications. in the 20th ACM EuroSys 2025 <a href="paper/eurosys2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 
@@ -236,6 +238,12 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 
 <p lang="en-US"><span class="blue"> System Dependability </span></p>
 
+<p><span class="style11">&bull; X. Sun, X. Liu, Q. Ye, H. Hu, R. Yang, H. He, W. Zhang. DPDeno: A Post-Processing Framework for Releasing Differentially Private Spatio-Temporal Mobility Features.  IEEE Transactions on Information Forensics and Security (TIFS) <a href="paper/tifs2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+<p><span class="style11">&bull; Z. Wang, J. Liu, P. Zhang, X. Sun, X. Wang, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang*. KAIOps: A Platform Solution of End-to-End Multi-Modal AIOps for AI Training at Scale. The 40th IEEE/ACM International Conference on Automated Software Engineering (ASE) <a href="paper/ase2025-kaiops.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+<p><span class="style11">&bull; X. Mou, R. Wang, T. Wang, R. Yang*, S. Chen, J. Sun, T. Wo, X. Liu. CAPMix: Robust Time Series Anomaly Detection Based on Abnormal Assumptions with Dual-Space Mixup. arXiv Preprint, 2025 <a href="https://arxiv.org/abs/2509.06419"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a>
+
 <p><span class="style11">&bull; Z. Zou, M. Zhang, G. Li, R. Yang, T. Wo, C. Hu, M. Xu. Recent Advances in Programmable Switches Driven Network Security. Journal of Software, 2025 (In Chinese) <a href="paper/jos2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p><span class="style11">&bull; Y. Zhao, M. Zhang, T. Wo, R. Yang, C. Hu. BTDefense: A Priority-Aware Adaptive Strategy Against the Block Table Overflow Attack in vLLM. The 30th Symposium on Operating Systems (SOSP), 2024, poster <a href="paper/sosp2024-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
@@ -296,6 +304,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 
 <p lang="en-US"><span class="blue"> AI Algorithms and Applications </span></p>
+
 
 <p><span class="style11">&bull; C. Luo, T. Chen, R. Yang*, W. Wu, C. Hu. GenSC: A Novel and General Local Search Framework for Set Covering Problem. Frontiers of Computer Science (FCS), 2025 <a href="paper/fcs2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
